# ClaudeEvolve

./: .gitignore  README.md  install.sh
circle_packing/: best_solution.py  evaluator.py
claude_evolve/: pyproject.toml
claude_evolve/claude_evolve/: __init__.py  cli.py  config.py
claude_evolve/claude_evolve/core/: artifact.py  database.py  evaluator.py  improvement_signal.py  memory.py  novelty.py  orchestrator.py  reflection.py  research.py  scratchpad.py  stagnation.py  strategy.py  ucb_selector.py  warm_cache.py
claude_evolve/claude_evolve/prompt/: __init__.py  context_builder.py  templates.py
claude_evolve/claude_evolve/prompt/default_templates/: fragments.json
claude_evolve/claude_evolve/state/: __init__.py  checkpoint.py  loop_state.py  manager.py
claude_evolve/claude_evolve/utils/: __init__.py  code_utils.py  format_utils.py  metrics_utils.py
claude_evolve/tests/: test_accumulation.py  test_artifact.py  test_cli.py  test_code_utils.py  test_config.py  test_context_builder.py  test_database.py  test_evaluator.py  test_improvement_signal.py  test_integration.py  test_memory.py  test_metrics_utils.py  test_novelty.py  test_orchestrator.py  test_reflection.py  test_research.py  test_scratchpad.py  test_stagnation.py  test_state.py  test_strategy.py  test_ucb_selector.py  test_warm_cache.py
docs/: circle_packing_paper.md  verify_circle_packing.py
evolve_output/: best_artifact  best_circle_packing_final.py  best_circle_packing_strict.py
plugin/: README.md
ramsey_R5_5/: evaluator.py  program.py
test_problem/: candidate.py  evaluator.py  program.py
(+23 files in other folders)
